# ComputationalChessPlayground

./: .gitignore  README.md  balanced_random_positions.py  chess-api-demo.py  commands.txt  generate-selfplay-games-lc0.py  generate-selfplay-games.py  iterative_deepening.py  maia3-demo.md  random_game.py  requirements.txt  wdl_annotation_demo.py
.claude/: settings.json
pgn-game-reader/: Cargo.toml
pgn-game-reader/src/: lib.rs
pgn-stats/: Cargo.toml
pgn-stats/src/: accuracy.rs  engine_agreement.rs  game_reader.rs  game_reader_demo.rs  game_reader_playthru.rs  lib.rs  maia3_demo.rs  main.rs  stockfish_demo.rs  stockfish_variety.rs  uci_engine.rs
selfplay/: trompowsky1.pgn
