[package]
name = "pgn-stats"
version = "0.1.0"
edition = "2024"

[dependencies]
pgn-reader = "0.29"
pgnparse = "0.1"
pgn-game-reader = { path = "../pgn-game-reader" }
shakmaty = "0.30"
stockfish = "0.2"

[[bin]]
name = "pgn-stats"
path = "src/main.rs"

[[bin]]
name = "pgn-stats-pgnparse"
path = "src/pgnparse.rs"

[[bin]]
name = "pgn-stats-game-reader"
path = "src/game_reader.rs"

[[bin]]
name = "game-reader-demo"
path = "src/game_reader_demo.rs"

[[bin]]
name = "game-reader-playthru"
path = "src/game_reader_playthru.rs"

[[bin]]
name = "stockfish-demo"
path = "src/stockfish_demo.rs"

